--- a/cart.html
+++ b/cart.html
@@ -36,11 +36,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="login page.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">
-                            <img src="D:\html\新建文件夹\asset\vector-shopping-cart-icon.jpg" alt="Cart" style="width: 20px;">
+                            <img src="D:\html\final project\asset\vector-shopping-cart-icon.jpg" alt="Cart" style="width: 20px;">
                             <span id="cart-count">0</span>
                         </a>
                     </li>
@@ -56,7 +56,7 @@
             <h1>Your Shopping Cart</h1>
             <div id="cart-items"></div>
             <div style="text-align: center;">
-                <button type="button" class="btn btn-dark" onclick="window.location.href='index.html'">Continue Shopping</button>
+                <button type="button" class="btn btn-dark" onclick="window.location.href='login page.html'">Continue Shopping</button>
             </div>
         </div>
     </section>
