--- a/learn-more.html
+++ b/learn-more.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar smooth-scroll">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="login page.html">
                 <img src="asset/logo.jpg" class="logo" alt="Logo" /> Dorbao
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -23,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="login page.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about-us">About Us</a>
+                        <a class="nav-link" href="login page.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Products</a>
+                        <a class="nav-link" href="login page.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact</a>
+                        <a class="nav-link" href="login page.html">Contact</a>
                     </li>
                 </ul>
             </div>
