--- a/product1.html
+++ b/product1.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="login page.html">Home</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="D:\html\新建文件夹\asset\product1.jpg" class="img-fluid" alt="Handcrafted Vase">
+                    <img src="D:\html\final project\asset\product1.jpg" class="img-fluid" alt="Handcrafted Vase">
                 </div>
                 <div class="col-md-6">
                     <h1>bearbrick</h1>
