--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body {
             
             if (username === '123' && password === '123') {
                 sessionStorage.setItem('loggedIn', 'true');
-                window.location.href = 'index.html';
+                window.location.href = 'login page.html';
             } else {
                 alert('Invalid username or password');
             }
