--- a/login page.html
+++ b/login page.html
@@ -211,7 +211,7 @@
         function checkLogin() {
             const loggedIn = sessionStorage.getItem('loggedIn');
             if (!loggedIn) {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         }
         checkLogin();
